cncf-certifications/cca/domains/ebpf/05-network-policy-enforcement-with-ebpf/manifests/allow-client-to-echo.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-client-to-echo
  namespace: ebpf-lab
spec:
  endpointSelector:
    matchLabels:
      app: echo
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: client
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
